@@ -1,3 +1,9 @@
+2006-06-28  Benoît Dejean  <benoit@placenet.org>
+
+	* src/proctable.c: (proctable_new):
+	
+	Use fixed width only for COL_NAME and COL_ARGS.
+
 2006-06-25  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
